Navbar + Siderbar + buttons + calendar

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,2 +1,8 @@
+$border-color-primary: #b3b3b3;
+$color_grey: rgb(204, 204, 204);
+$color_azul: rgb(0, 114, 206);
+$dark_blue: #2c2b30;
 
-$border-color-primary: #B3B3B3;
+$width_page: 80%;
+
+$border-radius: 8px;
